secure-ingress/svc-hello-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-php
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: hello-php
  ports:
  - name: tcp-port
    protocol: TCP
    port: 8080
    targetPort: 8080
